# gcp-release-notes

./: .env.example  CLAUDE.md  Dockerfile  README.md  ai.py  cloudbuild.yaml  compose.override.yaml  compose.yaml  main.py  nginx.conf  pyproject.toml  queries.py  requirements.txt  start.sh  utils.py
.githib/workflows/: deploy.yaml
.github/workflows/: deploy-cloudrun.yaml  deploy.yaml  preview-deploy.yaml
.streamlit/: index.html
assets/: style.css
backend/: Dockerfile  app.py  requirements.txt
backend/src/: ai.py  bq.py  config.py  queries.py
frontend/: Dockerfile  main.py  nginx.conf  requirements.txt  start.sh
frontend-next/: Dockerfile  package.json
frontend-next/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend-next/src/app/api/[...path]/: route.ts
frontend-next/src/app/chat/: page.module.css  page.tsx
frontend-next/src/app/explore/: ExploreClient.module.css  ExploreClient.tsx  page.tsx
frontend-next/src/app/morning-paper/: page.tsx
frontend-next/src/app/share/: page.module.css  page.tsx
frontend-next/src/components/: Badge.module.css  Badge.tsx  Nav.module.css  Nav.tsx
frontend-next/src/lib/: api.ts  utils.ts
frontend/.streamlit/: index.html
frontend/assets/: style.css
frontend/src/: utils.py
ingestion/: .env.example  Dockerfile  README.md  main.py  requirements.txt
ingestion/src/: bq_client.py  config.py  loader.py
ingestion/src/providers/: __init__.py  base.py  gcp.py
ingestion/src/sources/: bigquery_source.py  rss_source.py
src/: __init__.py  ai_insights.py  auth.py  bq.py  config.py  db.py  personalized.py  queries.py  utils.py
